--- a/views/base.njk
+++ b/views/base.njk
@@ -4,18 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasks Management | Page Not Found</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Tasks Management</title>
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/frontendJs.js" defer></script>
 </head>
 
 <body>
     <header class="done"><a href="/"><img src="/logo.svg" alt="Logo"></a></header>
     <div class="container">
-        <h1>Page Not found</h1>
+       {% block content %}
+        
+       {% endblock %}
     </div>
     <footer>
         <p>&copy; 2024 Learn Node Tasks Management</p>
     </footer>
+
 </body>
+
 
 </html>
