--- a/views/welcome.njk
+++ b/views/welcome.njk
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasks Management</title>
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/frontendJs.js" defer></script>
-</head>
-
-<body>
-    <header class="done"><a href="/"><img src="/logo.svg" alt="Logo"></a></header>
-    <div class="container">
-        <h1>Welcome to Tasks Management</h1>
+ {% extends "base.njk" %}
+ {% block content %}
+    
+<h1>Welcome to Tasks Management</h1>
         <a href="/new" class="fab">+</a>
         <div class="task-list">
             <a href="/task">
@@ -34,12 +24,4 @@
                 </div>
             </a>
         </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 Learn Node Tasks Management</p>
-    </footer>
-
-</body>
-
-
-</html>
+   {% endblock %}
