--- a/views/base.njk
+++ b/views/base.njk
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasks Management</title>
+    <title>Tasks Management | {{ subtitle }}</title>
     <link rel="stylesheet" href="/styles.css">
     <script src="/frontendJs.js" defer></script>
 </head>
