--- a/views/welcome.njk
+++ b/views/welcome.njk
@@ -8,6 +8,7 @@
              <a href="/task/{{ task.id }}">
                  <div class="task {% if task.done %}done{% else %}pending{% endif %}">
                      <h3>{{ task.title |capitalize }}</h3>
+                     <img src="{{ task.imageUrl }}" alt="task">
                      <p>{{ task.description }}</p>
                  </div>
              </a>
