--- a/views/base.njk
+++ b/views/base.njk
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-    <header class="done"><a href="/"><img src="/logo.svg" alt="Logo"></a></header>
+    <header class="done">
+        <a href="/">
+            <img src="/logo.svg" alt="Logo">
+        </a>
+        <a href=/auth> Login </a>
+    </header>
     <div class="container">
        {% block content %}
         
