--- a/views/base.njk
+++ b/views/base.njk
@@ -14,7 +14,13 @@
         <a href="/">
             <img src="/logo.svg" alt="Logo">
         </a>
-        <a href=/auth> Login </a>
+        {% if owner %}
+            <button class='btn delete-button' onclick="logout()">
+               Logout {{owner}}
+            </button>
+        {% else %}
+            <a  href=/auth> Login </a>
+        {% endif %}
     </header>
     <div class="container">
        {% block content %}
