--- a/views/new.njk
+++ b/views/new.njk
@@ -9,8 +9,7 @@
             <input type="text" name="title" id="titleId" placeholder="Title" required value={{title}}>
             <label for="descriptionId">Enter a description of your task:</label>
             <textarea name="description" id="descriptionId" cols="30" rows="10" placeholder="Description" required>{{description}}</textarea>
-            <label for="ownerId">Enter the owner of the task:</label>
-            <input type="text" name="owner" id="ownerId" placeholder="Owner" required  value={{owner}}>
+            <input type="hidden" name="owner" id="ownerId" placeholder="Owner" required  value={{owner}}>
             <label for="publicId">Is this task publicly viewable?</label>
             <input type="checkbox" name="isPublic" id="publicId" {% if isPublic %}checked{% endif %}>
             
